--- a/css/styles.css
+++ b/css/styles.css
@@ -117,3 +117,36 @@ a {
         padding-left: 0;
     }
 }
+
+/* Badges */
+.badge {
+    border-radius: 20rem;
+    padding: 0.5rem 2rem;
+    font-weight: 600;
+    white-space: nowrap;
+}
+
+.badge--primary {
+    background: var(--color-primary);
+    color: white;
+}
+
+.badge--secondary {
+    background: var(--color-secondary);
+    color: white;
+}
+
+.badge--small {
+    font-size: 1.5rem;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .badge{
+        font-size: 1.5rem;
+    }
+
+    .badge--small{
+        font-size: 1.2rem;
+    }
+}
