--- a/css/styles.css
+++ b/css/styles.css
@@ -142,11 +142,31 @@ a {
 
 @media screen and (min-width: 1024px) {
 
-    .badge{
+    .badge {
         font-size: 1.5rem;
     }
 
-    .badge--small{
+    .badge--small {
         font-size: 1.2rem;
     }
+}
+
+/* Icons */
+.icon {
+    width: 50px;
+    height: 50px;
+}
+
+.icon-primary {
+    fill: var(--color-primary);
+}
+
+.icon-container{
+    width: 66px;
+    height: 66px;
+    background-color: #f3f9fa;
+    border-radius: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
