--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,9 @@
     --color-secondary:#00d9ff;
     --color-accent:#ff3400;
     --color-headings:#1b0760;
+    --color-border: #ccc;
     --color-body:#918ca4;
+    --border-radius:30px
 }
 
 *,
@@ -238,6 +240,41 @@ a {
 @media screen and (min-width: 1024px) {
     .btn {
         font-size: 1.5rem;
-
     }
+}
+
+/* Inputs */
+.input {
+    border: 1px solid var(--color-border);
+    border-radius: var(--border-radius);
+    padding: 1.5rem 3.5rem;
+    outline: none;
+    color: var(--color-headings);
+    font-size: 2.5rem;
+}
+
+::placeholder{
+    color: #cdcbd7;
+}
+
+.input-group {
+    border: 1px solid var(--color-border);
+    border-radius: var(--border-radius);
+    display: flex;
+}
+
+.input-group .input{
+    border: 0;
+    flex-grow: 1;
+}
+
+.input-group .btn{
+
+}
+
+@media screen and (min-width: 1024px) {
+    .input {
+        font-size: 1.5rem;
+    }
+    
 }
