--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
     --color-headings:#1b0760;
     --color-border: #ccc;
     --color-body:#918ca4;
+    --color-dark-body:#5c5577;
     --border-radius:30px
 }
 
@@ -385,4 +386,48 @@ a {
 
 .media__image {
     margin-top: 1rem;
+}
+
+/* Quote */
+.quote {
+    font-size: 3rem;
+    font-style: italic;
+    color: var(--color-dark-body);
+    line-height: 1.3;
+}
+
+.quote__text::before {
+    content: open-quote;
+}
+
+.quote__text::after {
+    content: close-quote;
+}
+
+.quote__author {
+    font-size: 3rem;
+    font-weight: 500;
+    font-style: normal;
+    margin-top: 1.2rem;
+}
+
+.quote__oraganization {
+    color: var(--color-headings);
+    opacity: 0.4;
+    font-size: 2rem;
+    font-style: normal;
+}
+
+@media screen and (min-width: 1024px){
+    .quote {
+        font-size: 2rem;
+    }
+
+    .quote__author {
+        font-size: 2.5rem;
+    }
+
+    .quote__oraganization {
+        font-size: 1.5rem;
+    }
 }
