--- a/css/styles.css
+++ b/css/styles.css
@@ -431,3 +431,14 @@ a {
         font-size: 1.5rem;
     }
 }
+
+/* Grid */
+.grid {
+    display: grid;
+}
+
+@media screen and (min-width: 768px){
+    .grid--1x2 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
