--- a/css/styles.css
+++ b/css/styles.css
@@ -162,22 +162,35 @@ a {
 
 /* Icons */
 .icon {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
+}
+
+.icon--small {
+    width: 30px;
+    height: 30px;
 }
 
 .icon-primary {
     fill: var(--color-primary);
 }
 
+.icon--white {
+    fill: #fff;
+}
+
 .icon-container{
-    width: 66px;
-    height: 66px;
+    width: 64px;
+    height: 64px;
     background-color: #f3f9fa;
     border-radius: 100%;
     display: inline-flex;
     justify-content: center;
     align-items: center;
+}
+
+.icon-container--accent {
+    background-color: var(--color-accent);
 }
 
 /* Buttons */
@@ -440,5 +453,36 @@ a {
 @media screen and (min-width: 768px){
     .grid--1x2 {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+/* Review Card */
+.review_card {
+    padding: 3rem;
+}
+
+.rc__image {
+    position: relative;
+}
+
+.rc__image > img {
+    width: 100%;
+}
+
+.rc__image > .icon-container {
+    position: absolute;
+    top: 2rem;
+    right: -32px;
+}
+
+@media screen and (min-width: 1024px) {
+    .review_card .quote,
+    .review_card .quote__author {
+        font-size: 2.5rem;
+    }
+
+    .review_card .quote {
+        margin-left: 6rem;
+        margin-right: 0;
     }
 }
