--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
 h1, h2, h3 {
     color: var(--color-headings);
     margin-bottom: 1rem;
+    line-height: 1.1;
 }
 
 h1 {
@@ -657,5 +658,37 @@ a {
     }
     .nav__item {
         border: 0;
+    }
+}
+
+/* Hero */
+.hero {
+     clip-path: polygon(0 0, 100% 0, 100% 92%, 0% 100%);
+}
+
+.container {
+    max-width: 1140px;
+}
+
+.hero__tagline {
+    font-size: 2rem;
+    color: #b9c3cf;
+    letter-spacing: 1px;
+    margin: 2rem 0 5rem;
+}
+
+.hero__image {
+    width: 100%;
+    margin-top: 5rem;
+}
+
+@media screen and (min-width: 768px){
+    .hero {
+        padding: 20rem;
+    }
+
+    .hero__content {
+        text-align: left;
+        align-self: center;
     }
 }
