--- a/components/hero.html
+++ b/components/hero.html
@@ -1,12 +1,14 @@
-<nav class="nav collapsible">
-    <a href="/"><img class="logo" src="images/logo.png" alt=""></a>
-    <svg class="icon icon--white menu-icon">
-        <use xlink:href="images/sprite.svg#menu"></use>
-    </svg>
-    <ul class="list nav__list collapsible__content">
-        <li class='nav__item'><a href="#">Hosting</a></li>
-        <li class='nav__item'><a href="#">VPS</a></li>
-        <li class='nav__item'><a href="#">Domain</a></li>
-        <li class='nav__item'><a href="#">Pricing</a></li>
-    </ul>
-</nav>
+<div class="block block--dark block--skewed-left hero">
+    <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+            <h1 class="block__heading">Cloud J<br> Uplift your content</h1>
+            <p class="hero__tagline">An iconic Tech Experience...</p>
+            <a href="#" class="btn btn--accent btn--long">Get Started</a>
+        </header>
+        <picture>
+            <source type="image/webp" srcset="images/banner@1x.webp 1x, images/banner@2x.webp 2x">
+            <source type="image/png" srcset="images/banner@1x.png 1x, images/banner@2x.png 2x">
+            <img class="hero__image" src="images/banner1.webp" alt="Banner">
+        </picture>
+    </div>
+</div>
