--- a/css/styles.css
+++ b/css/styles.css
@@ -339,6 +339,11 @@ a {
 }
 
 /* Plans */
+
+.plan {
+    transition: transform 0.2s ease-out;
+}
+
 .plan__name {
     color: white;
     margin: 0;
@@ -368,6 +373,10 @@ a {
     margin-bottom: 2rem;
 }
 
+.plan--popular {
+    transform: scale(1.1);
+}
+
 .plan--popular .card__header {
     position: relative;
 }
@@ -379,6 +388,13 @@ a {
     position: absolute;
     top: -5px;
     right: 5%;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+.plan--popular:hover {
+    transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -468,6 +484,9 @@ a {
 @media screen and (min-width: 768px){
     .grid--1x2 {
         grid-template-columns: repeat(2, 1fr);
+    }
+    .grid--1x3 {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
@@ -726,3 +745,14 @@ a {
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     }
 }
+
+/* Plan Block */
+.block-plans .grid{
+    gap: 8rem 5rem;
+}
+
+.block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
