--- a/css/styles.css
+++ b/css/styles.css
@@ -756,3 +756,26 @@ a {
     margin: 0 auto;
 }
 
+/* Feature */
+.feature {
+    gap: 5rem 2rem;
+    margin: 12rem 0;
+}
+
+.feature:first-of-type {
+    margin: 5rem;
+}
+
+.feature__heading {
+    margin: 1rem 0;
+}
+
+.feature__image {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px){
+    .feature:nth-of-type(even) .feature__content {
+        order: 2;
+    }
+}
