--- a/css/styles.css
+++ b/css/styles.css
@@ -101,10 +101,8 @@ a {
 
 /* Lists */
 .list {
-    color: var(--color-headings);
     list-style: none;
     padding-left: 0;
-    display: inline-block;
 }
 
 .list--inline .list__item {
@@ -115,6 +113,7 @@ a {
 .list--tickmark {
     list-style-image: url(../images/tick.svg);
     padding-left: 3rem;
+    color: var(--color-headings);
 }
 
 .list--tickmark .list__item {
@@ -418,6 +417,7 @@ a {
 /* media */
 .media {
     display: flex;
+    margin-bottom: 4rem;
 }
 
 .media__title {
@@ -604,6 +604,7 @@ a {
 
 .block__header {
     text-align: center;
+    margin-bottom: 4rem;
 }
 
 .block__heading {
@@ -614,18 +615,25 @@ a {
     background: #000;
     color: #7b858b;
 }
+
+.block--dark h1,
+.block--dark h2,
+.block--dark h3 {
+    color: #fff;
+}
+
 .block--dark .block__heading {
     color: #fff;
 }
 
 .block--skewed-left {
     padding-bottom: calc(var(--padding--vertical) + 4rem);
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%);
 }
 
 .block--skewed-right {
     padding-bottom: calc(var(--padding--vertical) + 4rem);
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 80%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 95%);
 }
 
 /* Navbar */
@@ -696,6 +704,7 @@ a {
 
 .container {
     max-width: 1140px;
+    margin: 0 auto;
 }
 
 .hero__tagline {
@@ -777,5 +786,29 @@ a {
 @media screen and (min-width: 768px){
     .feature:nth-of-type(even) .feature__content {
         order: 2;
+    }
+}
+
+/* Showcase Block */
+
+.block-showcase__image > img {
+    width: 100%;
+}
+
+.block-showcase > h2 {
+    margin-bottom: 5rem;
+}
+
+@media screen and (min-width: 768px){
+    .block-showcase .grid{
+        grid-template-columns: 50% 50%;
+    }
+    .block-showcase__image {
+        justify-self: end;
+    }
+
+    .block-showcase__image > img {
+        width: auto;
+        max-width: 700px;
     }
 }
